--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
       <center> <h1>Weclome</h1></center> 
-        <p>Hello Everybody </p>
+        <p>This is the first paragraph </p>
     </body>
 </html>
