--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>Welcome to ower site</title>
     </head>
     <body>
-      <center> <h1>Weclome</h1></center> 
+      <center> <h1>Welcome</h1></center> 
         <p>This is the first paragraph </p>
+        <p> This is 2 paragraph</p>
     </body>
 </html>
