--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <center> <h1>Welcome</h1></center> 
         <p>This is the first paragraph </p>
         <p> This is 2 paragraph</p>
-        <h1>First Header</h1>
+	<h1>This is first header</h1>
+	<h2>This is second header</h2>
     </body>
 </html>
